--- a/style.css
+++ b/style.css
@@ -1,158 +1,378 @@
-/* Design tokens */
-:root {
-  --paper: hsla(251, 28%, 88%, 0.99);
-  --ink: hsla(250, 75%, 2%, 0.95);
-  --brand: hsla(0, 79%, 63%, 0.9);
-  --font: "Raleway", system-ui, sans-serif;
-  --gap: 20px;
-  --container: clamp(280px, calc(100vw - calc(var(--gap) * 2)), 1180px);
+/* Utility section */
+
+* {
+  font-family: "roboto", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-/* General Styles */
-html,
-body {
-  background-color: rgb(63, 49, 49);
-  color: rgb(240, 234, 234);
-  font-family: var(--font);
-  background-repeat: no-repeat;
-  object-fit: contain;
+
+h2 {
+  font-size: 42px;
+  font-weight: 100px;
 }
-body {
+
+.btn {
+  display: inline-block;
+  padding: 12px 20px;
+  border: none;
+  background: #c9c2c2;
+  font-size: 16px;
+  border-radius: 3px;
+  color: rgb(118, 106, 106);
+  transform: 0.4s;
+}
+
+.btn:hover {
+  background: rgb(211, 124, 11);
+  color: aliceblue;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+}
+.container-1 {
+  max-width: 1100px;
+  margin: auto;
+  display: flex;
+}
+/* navbar open */
+.logo-bb {
+  width: 5.3%;
+}
+
+#hamnav label,
+#hamburger {
+  display: none;
+}
+
+#hamitems {
+  float: right;
+}
+#hamitems a {
+  display: inline-block;
+  padding: 20px;
+  color: black;
+}
+
+#hamitems a:hover,
+#hamitems a.current {
+  background-color: rgb(211, 124, 11);
+  color: aliceblue;
+  transition: 0.4s;
+}
+
+/* navbar close */
+
+/* Showcase start */
+#showcase {
+  background-color: lightgray;
+  height: 600px;
+}
+#showcase .showcase-content {
+  padding-top: 170px;
+  /* float: left; */
+  width: 60%;
+}
+
+.showcase-content p {
+  font-size: 1.2rem;
+  line-height: 1.4em;
+  margin: 1.5em 0;
+}
+
+.showcase-content span {
+  color: rgb(211, 124, 11);
+}
+
+#showcase .img {
+  align-items: center;
+}
+
+.my-img {
   width: 100%;
-  border: 15px solid coral;
+  object-fit: cover;
+  height: 37.5rem;
+  margin-left: 3em;
+}
+
+/* about start */
+
+.container-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#about {
+  margin-top: 3em;
+}
+
+.img-about {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  width: 40%;
+}
+.about-content {
+  width: 40%;
+  padding: 2em;
+}
+
+#about h2 {
+  padding: 0.2em 0;
+  font-size: 4rem;
+  color: rgb(211, 124, 11);
+}
+
+#about h3 {
+  font-size: 1.5rem;
+  padding-bottom: 0.5rem;
+}
+
+#about p {
+  line-height: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+#about a {
+  margin: 0.9em 1em;
+}
+
+.logo-img {
+  width: 6%;
+}
+
+#about .social-btn {
+  margin-bottom: 1.6rem;
+}
+
+#about .social-btn ul {
+  list-style: none;
+}
+
+#about .social-btn ul li {
+  display: inline;
+}
+
+#about .social-btn i:hover {
+  color: #ddd;
+  background-color: rgb(169, 166, 162);
+  transform: 0.3s;
+}
+#about .social-btn i {
+  border: 1px solid rgb(211, 124, 11);
+  border-radius: 50%;
+  align-items: center;
+  padding: 2%;
+  padding-top: 5%;
+}
+
+/* about close */
+
+/* start services */
+#services {
+  background-color: lightgray;
+  height: 620px;
+  margin-top: 3rem;
+  text-align: center;
+  line-height: 0.6cm;
+}
+
+#services h2 {
+  padding-bottom: 1.5rem;
+  padding-top: 2rem;
+}
+
+.zero {
+  width: 80%;
+  height: 7em;
+  object-fit: cover;
+  border: 5px solid rgb(211, 124, 11);
+  background-color: antiquewhite;
+}
+
+#services .cards {
+  margin-top: 2em;
+  border: 9px solid rgb(213, 114, 7);
+  box-sizing: border-box;
+  padding: 0.1em 0.6em;
+  width: 60%;
+  background-color: white;
   animation: mymove 5s infinite;
 }
 
 @keyframes mymove {
   50% {
-    border-color: lightblue;
+    border-color: rgb(91, 43, 13);
   }
 }
 
-body {
+.cards:hover {
+  background-color: rgb(0, 0, 0);
+}
+
+.for-layout {
   display: grid;
-  margin: 20px;
-  min-height: 100vh;
-  gap: var(--gap);
-  max-width: var(--container);
-  font-size: 1.2rem;
-}
-a,
-a:any-link {
-  color: currentColor;
-  text-decoration: none;
-  border-bottom: 2px solid transparent;
-  transition: border-color ease-in-out 0.3s;
-}
-a:hover,
-a:focus {
-  color: var(--brand);
-  border-color: currentColor;
+  grid-template-columns: repeat(3, 6fr);
+  grid-template-rows: repeat(2, 6fr);
+  justify-items: center;
 }
 
-body > header {
+/* close services */
+
+/* hire me open */
+#attachment {
+  height: 25em;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-image: url("https://img.freepik.com/free-photo/flat-lay-desk-dark-concept-with-copy-space_23-2148459508.jpg");
+}
+
+.container-3 {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  top: 0;
-  gap: 60px;
-  z-index: 1;
+  padding: 6em 0;
+  color: white;
+  line-height: 3em;
 }
 
-nav {
-  padding-bottom: 18%;
+#attachment h3 {
+  font-size: 2.5em;
+}
+#attachment p {
+  font-size: 1.4em;
+  padding: 0.5em 0;
 }
 
-ul p {
+/* hire me close */
+
+/* footer open */
+.container-4 {
   display: flex;
-  text-decoration: none;
+  margin: 2em 10em;
+  gap: 4em;
 }
-
-nav ul {
-  display: flex;
-  list-style: none;
-  gap: var(--gap);
+.container-4 h2 {
+  color: rgb(213, 114, 7);
 }
-/*img*/
-
-.my-img {
-  width: 90%;
-  height: 13rem;
-  object-fit: contain;
-  margin-left: 2em;
+.container-4 p {
+  font-size: 1.2em;
 }
-
-.figure {
-  display: flex;
-  flex-direction: column;
-}
-
-/* Text readability */
-section p {
-  line-height: 1.5;
-  max-width: 55ch;
-}
-
-/*Modules*/
-.modules {
+.style-for-images {
   display: flex;
   flex-direction: column;
 }
 
-#about {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.svg-2 {
+  padding-top: 1em;
+  width: 6%;
+}
+.footer-logo {
+  width: 7%;
+}
+a {
+  color: rgb(202, 89, 19);
+  font-size: 1.2em;
+}
+a:hover {
+  color: rgb(31, 26, 21);
+  background-color: 3px solid rgb(128, 63, 24);
 }
 
-#about .about-content {
-  width: 60%;
-}
-.main {
-  background-color: var(--orange-light);
-  border-left: 4px solid var(--orange-dark);
-}
-
-/*Footer*/
-
-.footer {
-  margin-top: 1rem;
-}
-
-.footer__content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.for-you {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.img__footer {
-  text-align: center;
-  width: 3%;
-  border: 1px solid gray;
-  border-radius: 80%;
-  padding: 12px;
-  overflow: hidden;
-}
+/* footer close */
 @media screen and (max-width: 768px) {
-  body {
-    width: 100%;
-    border: 15px solid coral;
-    animation: mymove 5s infinite;
-    padding-right: 100%;
-    position: static;
-    overflow: hidden;
+  #hamitems {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    gap: 0.3em;
+    width: 38%;
+    height: 37em;
+    background-color: rgb(117, 105, 105);
+  }
+  #hamitems a {
+    border-radius: 3px;
+    line-height: 6em;
   }
 
-  .modules {
+  #hamnav label {
+    display: inline-block;
+    color: rgb(224, 108, 7);
+    font-size: 1.2em;
+    font-style: normal;
+    padding: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    padding-top: 3px;
+  }
+
+  #hamburger {
+    display: none;
+  }
+
+  #hamitems {
+    display: none;
+  }
+
+  #hamnav input:checked ~ #hamitems {
     display: flex;
     flex-direction: column;
-    padding-left: 70%;
-    padding-top: 10%;
-    position: relative;
+    margin-top: 43px;
+  }
+  .container-2 {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .my-img {
+    width: 82%;
+    object-fit: cover;
+  }
+  .about-content {
+    width: fit-content;
+    margin: 0;
+  }
+  .img-about {
+    width: 100%;
+    object-fit: cover;
+    margin: 0;
+    padding: 0;
+  }
+  .for-layout {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  #services {
+    height: 55rem;
+  }
+  .container-4 {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    gap: 1em;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  #hamnav label {
+    padding-top: 1px;
+  }
+  #services {
+    height: 73rem;
+  }
+  .container-4 {
+    display: flex;
+    flex-direction: column;
   }
 }
