--- a/style.css
+++ b/style.css
@@ -1,323 +1,476 @@
-/* Design tokens */
-:root {
-  --paper: hsla(0, 0%, 100%, 0.99);
-  --ink: hsla(244, 16%, 17%, 0.95);
-  --brand: hsla(0, 79%, 63%, 0.9);
-  --font: "Raleway", system-ui, sans-serif;
-  --gap: 20px;
-  --cyan: rgb(122, 157, 157);
-}
-/* General Styles */
+/* =================
+  WRITE YOUR CSS HERE.
+  Check the ⌄ for help with formatting and validating your code.
+  You must write some CSS to complete this challenge.
+   ===================
+*/
 html,
 body {
-  scroll-behavior: smooth;
-  background: var(--paper);
-  font-family: var(--font);
+  margin: 0;
+  height: 100%;
+}
+/* Utility Classes*/
+.bg1 {
+  background: #060709;
+}
+.bg2 {
+  background: hsl(180, 16%, 96%);
+}
+.bg3 {
+  background: #ff6700;
+}
+.color1 {
+  color: #ff6700;
+}
+.color2 {
+  color: #c0c0c0;
+}
+.color3 {
+  color: white;
+}
+.color4 {
+  color: #ffa200;
+}
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fs-60px {
+  font-size: 60px;
+}
+.fs-30px {
+  font-size: 30px;
+}
+.fs-38px {
+  font-size: 38px;
+}
+.ff-sign {
+  font-family: "Signika Negative", sans-serif;
+}
+.fw-400 {
+  font-weight: 400;
+}
+.fw-500 {
+  font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.mb-1 {
+  margin-block: 1rem;
+}
+.mb-2 {
+  margin-block: 2rem;
+}
+.mi-1 {
+  margin-inline: 1rem;
+}
+.mi-2 {
+  margin-inline: 2rem;
+}
+.pi-1 {
+  padding-inline: 1rem;
+}
+A {
+  text-decoration: none;
+}
+
+p {
+  line-height: 1.8rem;
+  word-spacing: 0.3rem;
+}
+
+#block {
+  display: block;
+}
+
+/*------MAIN------*/
+* {
+  box-sizing: border-box;
   margin: 0;
 }
 html {
-  animation: fade-in 1s;
+  scroll-behavior: smooth;
 }
-@keyframes fade-in {
+body {
+  width: 100vw;
+  height: 100vh auto;
+  font-family: "Raleway", sans-serif;
+  overflow-x: hidden;
+}
+.c-site-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 40rem auto;
+}
+.nav {
+  position: fixed;
+  height: 2rem;
+  width: 100%;
+  margin: 0;
+  background: black;
+  box-shadow: 5px 5px 40px 40px black;
+  z-index: 1;
+}
+.logo {
+  height: 3.2rem;
+  margin: 1rem;
+}
+
+.aboutme {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  min-height: 40rem auto;
+  width: 70%;
+  margin-top: 13rem;
+}
+.text {
+  position: relative;
+  display: block;
+  width: 60%;
+  height: 100% auto;
+  padding-top: 4rem;
+}
+.adniya {
+  font-family: "Raleway", sans-serif;
+}
+.typewriter {
+  width: 12ch;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 4px solid white;
+  animation: cursor 1s step-start infinite, text 4s steps(18) alternate infinite;
+}
+
+@keyframes cursor {
+  0%,
+  100% {
+    border-color: white;
+  }
+}
+
+@keyframes text {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 12ch;
+  }
+}
+.adniya::before {
+  position: absolute;
+  content: "WEB DESIGNER";
+  color: #0f0f0f;
+  z-index: -1;
+  top: 11rem;
+  font-size: 60px;
+  font-weight: 900;
+}
+.dot {
+  font-size: 30px;
+  color: #ff6700;
+}
+.aboutme-p {
+  padding-bottom: 3rem;
+  transform-origin: 100%;
+  transform: translateX(-1%);
+  transition: 1s ease-in;
+  text-align: justify;
+}
+
+.profile-pic {
+  cursor:pointer;
+  height: 27rem;
+  width: 20rem;
+  animation: scale 2s forwards;
+  transition: 1s ease-in-out;
+  margin-top: 2rem;
+  border-radius:50%;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.text-link:hover::before {
+  transform: translateX(250%);
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.skills-section {
+  min-height: 40rem;
+  max-width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-inline: 5rem;
+}
+.skills-heading {
+  display: flex;
+  flex: 35%;
+  flex-direction: column;
+  margin-right: 2rem;
+}
+.skills-detail {
+  flex: 50%;
+  text-align: justify;
+  font-size: 20px;
+}
+.skills-detail p::first-letter {
+  color: #ffa200;
+  font-size: 27px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.animate {
+  animation: animate-fade 1s linear backwards;
+}
+@keyframes animate-fade {
   0% {
     opacity: 0;
   }
-  100% {
-    opacity: 1;
-  }
-}
-body {
-  display: grid;
-  grid-template-columns: 5rem 1fr 5rem;
-  min-height: 100vh;
-  max-width: 100vw;
-}
-.header {
-  grid-column: 2/3;
-  height: 50rem;
-}
-.navbar {
-  height: 9rem;
-  margin-bottom: 3rem;
-  position: relative;
-}
-.logo {
-  width: 7rem;
-  aspect-ratio: 0.1/0.1;
-}
-
-.hero {
-  height: 30rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: var(--gap);
-  padding-left: 5rem;
-  margin-bottom: 3rem;
-}
-
-.icons {
-  position: relative;
-  height: 3rem;
-  width: 18rem;
-  display: flex;
-  gap: var(--gap);
-  margin-left: 12rem;
-}
-.icons::before {
-  position: absolute;
-  content: " ";
-  left: -13rem;
-  top: 2rem;
-  height: 0.15rem;
-  width: 15rem;
-  background-color: var(--cyan);
-}
-.icon-item {
-  height: rem;
-  margin-left: 1rem;
-  transition: 1s ease-in-out;
-}
-.icon-item svg {
-  transition: transform 1s ease-in-out;
-}
-.icon-item svg:hover {
-  fill: var(--cyan);
-  transform: scale(1.1);
-}
-.heading-hero {
-  position: relative;
-  font-size: 5rem;
-  margin-top: 0;
-  margin-left: 4rem;
-}
-.heading-hero::before {
-  position: absolute;
-  content: "“";
-  left: -9rem;
-  top: -15rem;
-  color: var(--cyan);
-  font-size: 40rem;
-  opacity: 0.08;
-}
-
-.colored {
-  color: var(--cyan);
-  animation: fade 1s linear 1 backwards alternate;
-}
-@keyframes fade {
-  0% {
-    opacity: 0.4;
-    text-shadow: 10px 10px 10px rgb(158, 151, 151);
-  }
   25% {
-    opacity: 0.7;
+    opacity: 0.03;
   }
   50% {
-    opacity: 0.8;
+    opacity: 0.05;
   }
   75% {
-    opacity: 0.9;
+    opacity: 0.07;
+  }
+  85% {
+    opacity: 0.09;
   }
   100% {
-    opacity: 1;
+    opacity: 0.1;
   }
 }
-main {
-  grid-row: 2/3;
-  grid-column: 2/3;
-}
-.intro {
-  display: flex;
-  flex-wrap: wrap;
-  height: 30rem;
-  margin-block-end: 8rem;
-}
-.main-img {
-  height: 30rem;
-  width: 40%;
-  background: url(/Light-Blue-Grey-White-Simple-Professional-Employment-LinkedIn-Profile-Picture.webp)
-    no-repeat;
-  background-size: contain;
-  background-position: right;
-}
-.intro__description {
-  width: 50%;
-  display: block;
-  margin-inline: auto;
-  margin-block: auto;
-  font-size: 2rem;
-  padding: 2rem;
-  color: rgb(140, 144, 144);
-}
-.skills {
-  
-  height: 30rem;
-  margin-block: 2rem;
-}
 
-.headings {
-  font-size: 3rem;
-  font-weight: 700;
-}
-.description {
-  width: 60%;
-  height: 5rem;
-  font-size: large;
-  font-weight: 500;
-  color: rgb(140, 144, 144);
-  line-height: 1.9rem;
-  padding-bottom: 6rem;
-  padding-top: 2rem;
-}
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  padding-left: 0.8rem;
-}
-.list-item {
-  width: 10rem;
-  height: 2.5rem;
-  list-style-image: url(/3.png);
-  list-style-position: inside;
-  padding-right: 9rem;
-  color: rgb(94, 97, 97);
-  font-weight: 600;
-  font-size: 1.25rem;
-}
-.list-item:hover {
-  font-weight: 700;
-}
-.project__container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  gap: 5rem;
-}
-
-.project-item {
+.text-link {
   position: relative;
-  width: 23rem;
-  height: 35rem;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 0.3rem;
+}
+.text-link::before {
+  position: absolute;
+  content: " ";
+  height: 4rem;
+  width: 4rem;
+  background: #ffa200e7;
+  z-index: -1;
+  left: -0.01rem;
+  top: -1.5rem;
+  border-radius: 150px;
+  transform-origin: 0%;
+  transform: translateX(0%);
+  transition: transform 1s ease;
+}
+.text-link:hover::before {
+  transform: translateX(150%);
+}
+
+.education-section {
+  height: 50rem auto;
+  width: 90%;
+  margin-bottom: 2rem;
+}
+.education {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.education-heading {
+  position: relative;
+  height: 5rem;
+  width: 100%;
+  margin-block: 3rem;
+  font-size: 40px;
+  text-align: center;
+}
+.education-heading::before {
+  position: absolute;
+  content: " ";
+  height: 0.5rem;
+  width: 2rem;
+  top: 3rem;
+  left: 42.5%;
+  background-color: #ffa200;
+  animation: circle 2s alternate 1s infinite;
+}
+@keyframes circle {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(500%);
+  }
+}
+
+.card {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  height: 21rem;
+  width: 24rem;
+  background-color: #0c0c0c;
+  border-radius: 8px;
+  padding: 2rem;
+  margin: 2rem;
 }
-.project-link {
-  opacity: 0;
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  height: 50%;
-  width: 100%;
+.card:hover {
+  box-shadow: 0px 1px 13px #2b2a2a;
+}
+.date {
+  font-family: "Segoe UI", sans-serif;
+  margin-block: 1rem;
+}
+.uni {
+  color: #bebe88;
+  font-size: 19px;
+}
+.biography-section {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  height: 40rem auto;
+  min-width: 90%;
+  margin-top: 3rem;
+}
+.bio-img {
+  width: 40rem;
+  height: 40rem;
+  background: url(https://images.pexels.com/photos/1572878/pexels-photo-1572878.jpeg);
+  background-position: top;
+  background-size: cover;
+  opacity: 0.4;
+}
+.bio-text {
+  width: 40rem;
+  font-size: 20px;
+  padding-inline: 2rem;
+  text-align: justify;
+  padding-top: 1rem;
+}
+.bio-heading {
+  padding-inline: 2rem;
+  margin-block: 2rem;
+}
+.bio-text::first-letter {
+  color: #ffa200;
+  font-size: 30px;
+  font-family: "Times New Roman", Times, serif;
+}
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 25rem auto;
+  width: 100%;
+  padding-bottom: 2rem;
+  padding-top: 5rem;
+}
+.contact-section h1 {
+  height: 5rem;
+  width: 85%;
+  font-size: 35px;
+  text-align: center;
+}
+.form {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  text-decoration: none;
-  color:white;
-  font-size: 2rem;
-  font-weight: 700;
-  text-align: center;
-  transition: .5s ease;
-  backdrop-filter: invert(5%) blur(10px) sepia(15%)  contrast(50%);
+  width: 85%;
 }
-.project-img{
-  width: 9;
-  height: 9;
-  aspect-ratio: 1.36/1;
+.input-label {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem;
 }
-.project-img img{
+.label {
+  word-spacing: 0.7rem;
+  font-size: 20px;
+  margin-bottom: 2rem;
+}
+.input {
+  width: 15rem;
+  background: transparent;
+  color: white;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 3px solid #8b3b05;
+  font-size: 20px;
+}
+.input:hover {
+  border-bottom: 2px solid #ff6700;
+}
+.input:active,
+.input:focus {
+  outline: none;
+  border-bottom: 3px solid #ff6700;
+}
+.button {
   cursor: pointer;
+  width: 12rem;
+  height: 4rem;
+  background: linear-gradient(to right, #ff6700, rgb(107, 65, 1));
+  font-size: 20px;
+  border-radius: 30px;
+}
+.button:hover {
+  background: #8b3b05;
+}
+#msg {
+  display: none;
+}
+.c-site-footer {
+  display: flex;
+  align-items: end;
   justify-content: center;
-}
-.portfolio{
-  object-fit: contain;
-}
-.project-card {
-  flex: 50%;
-}
-.project-heading {
-  font-size: 2.5rem;
-  font-weight: 600;
-  margin: 0;
-}
-
-.project-link:hover {
-  opacity: 1;
-}
-.arrow svg {
-  fill: rgb(246, 246, 246);
-  height: 0.7em;
-  margin-left: 0.5rem;
-}
-.contact {
-  height: 10rem;
-  margin-block: 4rem;
-}
-.contact-description {
-  width: 60%;
   height: 5rem;
-  font-size: large;
-  font-weight: 500;
-  color: rgb(140, 144, 144);
-  line-height: 1.9rem;
+  width: 100%;
+  background: linear-gradient(0deg, transparent, #ff7600);
 }
-.contact-link {
-  margin: 0;
-  color: rgb(77, 94, 96);
-  font-size: 1.3rem;
-  font-weight: 600;
-}
-.portfolio-img {
-  background: url(/1.png) no-repeat center;
-  background-size: contain;
-}
-footer {
-  position: sticky;
-  grid-column: 1/-1;
-  grid-row: 3/4;
-  height: 2.7rem;
-  margin-top: 5rem;
+.icons {
   display: flex;
-  align-items: end;
   justify-content: space-between;
-  background-image: linear-gradient(
-    to right,
-    rgba(143, 236, 219, 0),
-    rgb(225, 243, 240)
-  );
-  bottom: 0;
-}
-.logo-footer {
-  height: 3.7rem;
-  width: 3.7rem;
-  background: url(/adniya.png) no-repeat;
-  background-position: center;
-  background-size: contain;
-  margin-bottom: -0.4rem;
-}
-li {
-  list-style: none;
-}
-.footer-list {
   height: 3rem;
-  display: flex;
-  gap: 1rem;
-  align-items: end;
-  margin-right: 2rem;
+  width: 13rem;
+  font-size: 30px;
 }
-.list-item-footer {
-  height: 2rem;
-  list-style: none;
-  color: rgb(118, 122, 122);
-  font-weight: 600;
-  font-size: 1rem;
-  text-decoration: none;
+.icons i {
+  height: 4rem;
+  width: 4rem;
+  color: #c0c0c0;
+  transform: scale(1);
+  transition: 1s ease;
 }
-.list-item-footer:hover {
-  color: var(--cyan);
+.icons i:hover {
+  color: black;
+  cursor: pointer;
+  transform: scale(1.2);
+}
+/* don't edit this */
+.jest-lite-report__status--pass {
+  background: var(--color-pass);
+}
+.jest-lite-report__errors {
+  display: none;
 }
